@@ -893,3 +893,6 @@ https://chatgpt.com/share/67afdaf3-9d4c-800c-81bc-327cdd7382b1
 waiting for o3 model to reset, hopefully it will find a solution, all other LLMs failed, couldn't find a location parameter via revitlookup addin
 ***** =19:03= made a few more attempts with o3 model, but couldn't still get it to work
 having bad luck with sections in revit in general
+*** 18
+**** =13:40= couldn't write a command that would automate creating a detail item family out of current elements
+simialar in user experience as grouping
